# mCODE-MOSAICO

./: DICOM_Info_Extractor+Radiomics.ipynb  Extract_mCODE_attributes_Radiomics_and_Dosiomics.ipynb  README.md  mCode_radiomics.py  mcode_utils.py  radiomics_utils.py  requirements.txt  setup.cfg  setup.py
examples/: Params.yaml  _BODY_dosimetric.json  example_mcode_utils(FULL_PIPELINE).ipynb  examples_radiomics.ipynb
examples/.ipynb_checkpoints/: example_mcode_utils(FULL_PIPELINE)-checkpoint.ipynb  examples_radiomics-checkpoint.ipynb
examples/GBM_burdenko_example/2.000000-CT00CT-58964/: 1-002.dcm  1-003.dcm  1-004.dcm  1-005.dcm  1-006.dcm  1-009.dcm  1-010.dcm  1-013.dcm  1-014.dcm  1-015.dcm  1-016.dcm  1-017.dcm  1-019.dcm  1-020.dcm  1-021.dcm  1-022.dcm  1-025.dcm  1-026.dcm  1-027.dcm  1-028.dcm  1-029.dcm  1-030.dcm  1-031.dcm  1-032.dcm  1-033.dcm  1-034.dcm  1-036.dcm  1-039.dcm  1-040.dcm  1-042.dcm  1-043.dcm  1-045.dcm  1-046.dcm  1-047.dcm  1-048.dcm  1-049.dcm  1-050.dcm  1-052.dcm  1-053.dcm  1-054.dcm  (+103 more)
examples/GBM_burdenko_example/3.000000-MR0T2FLAIR-90484/: 1-001.dcm  1-002.dcm  1-005.dcm  1-006.dcm  1-007.dcm  1-008.dcm  1-010.dcm  1-012.dcm  1-013.dcm  1-017.dcm  1-019.dcm  1-022.dcm  1-023.dcm  1-024.dcm  1-025.dcm  1-026.dcm  1-029.dcm  1-031.dcm  (+86 more)
utils/: dicom_utils.py  extract_only_all_features.py  extract_only_dosiomics.py  extract_only_dvh_factors.py  extract_only_radiomics.py  full_pipeline.py  images_utils.py  mcode_utils.py  radiomics_utils.py  sort_and_extract.py  sort_mCODEfiles.py
utils/.ipynb_checkpoints/: dicom_utils-checkpoint.py
(+470 files in other folders)
