[metadata]
name = mCODE-MOSAICO
version = 0.1.0
author = O Rios-Ibacache
author_email = odette.riosibacache@mail.mcgill.ca
description = A package and pipeline to extract radiomics and dosiomics structured information 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires = 
	pydicom>=2.4.4
  	scipy>=0.24.0
  	numpy>=1.19.5
  	pyvista>=0.31.3
  	alphashape>=1.3.1
  	scikit-learn>=1.5.2
  	shapely>=2.0.2
  	opencv-python>=4.11.0.86
